<resources>
    <string name="app_name">FinancialTracker</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="remaining">Remaining</string>
    <string name="set_budget">Set Budget</string>
    <string name="graph">Graph</string>
    <string name="update">Update</string>
    <string name="add_expense">Add Expense</string>
    <string name="add_income">Add Income</string>
    <string name="recurring_payment">Recurring payment</string>
    <string name="recurring_income">Recurring income</string>
    <string name="expense">Expense</string>
    <string name="expenses_title">Expenses</string>
    <string name="expenses_subtitle">Monitor your spending</string>
    <string name="income">Income</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="icon">Icon</string>
    <string name="amount">Amount</string>
    <string name="date">Date</string>
    <string name="groceries">Groceries</string>
    <string name="transport">Transport</string>
    <string name="entertainment">Entertainment</string>
    <string name="dining">Dining</string>
    <string name="shopping">Shopping</string>
    <string name="gym_membership">Gym Membership</string>
    <string name="travel">Travel</string>
    <string name="subscription">Subscription</string>
    <string name="education">Education</string>
    <string name="healthcare">Healthcare</string>
    <string name="rent">Rent</string>
    <string name="category">Category</string>
    <string name="mortgage">Mortgage</string>
    <string name="car_payment">Car Payment</string>
    <string name="loan_payments">Loan Payments</string>
    <string name="salary">Salary</string>
    <string name="freelance">Freelance</string>
    <string name="investments">Investments</string>
    <string name="side_hustle">Side Hustle</string>
    <string name="bonus">Bonus</string>
    <string name="source">Source</string>
    <string name="enter_income">Enter Income</string>
    <string name="log_out">Log Out</string>
    <string name="account">Account</string>
    <string name="account_subtitle">Manage your profile</string>
    <string name="full_name">Full Name</string>
    <string name="enter_full_name">Enter your full name</string>
    <string name="app_theme">App Theme</string>
    <string name="enable_notifications">Enable Notifications</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="graph_size">Graph Size</string>
    <string name="change_profile_picture">Change Photo</string>
    <string name="change_username">Change Username</string>
    <string name="change_password">Change Password</string>
    <string name="change_email">Change Email</string>
    <string name="new_username">New Username</string>
    <string name="new_password">New Password</string>
    <string name="new_email">New Email</string>
    <string name="save_changes">Save Changes</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="save">Save</string>
    <string name="search_hint">Search</string>
    <string name="chat">Chat</string>
    <string name="scan">Scan</string>
    <string name="change_name">Change Name</string>
    <string name="new_name">New Name</string>
    <string name="show_qr_code">Show QR</string>
    <string name="qr_code">QR Code</string>
    <string name="hide_qr_code">Hide QR Code</string>
    <string name="remove">Remove</string>
    <string name="send">Send</string>
    <string name="type_message">Type a message</string>
    <string name="stop_scan">Stop Scan</string>
    <string name="change_language">Change Language</string>
    <string name="amount_format">%1$.2f€</string>
    <string name="friends_list">friends_list</string>
    <string name="friendProfilePic" />
    <string name="profilePic" />
    <string name="update_expense">Update Expense</string>
    <string name="update_income">Update Income</string>
    <string name="_16p">16p</string>
    <string name="edit_date">Edit Date</string>
    <string name="search">Search</string>
    <string name="add">Add</string>
    <string name="friends_progress">Friends Progress</string>
    <string name="monthly_spending">Monthly Spending</string>
    <string name="transaction_history">Transaction History</string>
    <string name="manage_your_profile">Manage your profile</string>
    <string name="friends">Friends</string>
    <string name="manage_your_connections">Manage your connections</string>
    <string name="monitor_your_spending">Monitor your spending</string>
    <string name="track_your_earnings">Track your earnings</string>
    <string name="customize_your_experience">Customize your experience</string>
    <string name="log_your_earnings">Log your earnings</string>
    <string name="track_your_spending">Track your spending</string>
    <string name="modify_your_spending_entry">Modify your spending entry</string>
    <string name="modify_your_entry">Modify your entry</string>
    <string name="online">online</string>
    <string name="offline">offline</string>"


    <string-array name="expense_categories">
        <item>@string/groceries</item>
        <item>@string/transport</item>
        <item>@string/entertainment</item>
        <item>@string/dining</item>
        <item>@string/shopping</item>
        <item>@string/gym_membership</item>
        <item>@string/travel</item>
        <item>@string/subscription</item>
        <item>@string/education</item>
        <item>@string/healthcare</item>
        <item>@string/rent</item>
        <item>@string/mortgage</item>
        <item>@string/car_payment</item>
        <item>@string/loan_payments</item>
    </string-array>

    <string-array name="income_categories">
        <item>@string/salary</item>
        <item>@string/freelance</item>
        <item>@string/investments</item>
        <item>@string/side_hustle</item>
        <item>@string/bonus</item>
    </string-array>
</resources>