<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp">

    <!-- Page Title -->
    <TextView
        android:id="@+id/account_control_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account"
        android:textColor="?attr/colorOnSurface"
        android:textSize="28sp"
        android:fontFamily="sans-serif-medium"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp"/>

    <!-- Profile Picture -->
    <ImageView
        android:id="@+id/profile_picture"
        android:layout_width="220dp"
        android:layout_height="220dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/user"
        app:layout_constraintTop_toBottomOf="@id/account_control_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Change Profile Picture -->
    <Button
        android:id="@+id/change_profile_picture_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="?attr/colorPrimary"
        android:text="@string/change_profile_picture"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/profile_picture"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Username Label -->
    <TextView
        android:id="@+id/username_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/change_username"
        android:textColor="?attr/colorOnSurface"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/change_profile_picture_button"
        app:layout_constraintStart_toStartOf="parent"/>

    <!-- Username Input -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/username_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_username"
        app:boxBackgroundMode="outline"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/username_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username_input"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:padding="16dp"
            android:textColor="?attr/colorOnSurface"
            android:textColorHint="?attr/colorOnSecondary"
            android:inputType="text"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Email Label -->
    <TextView
        android:id="@+id/email_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/change_email"
        android:textColor="?attr/colorOnSurface"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/username_input_layout"
        app:layout_constraintStart_toStartOf="parent"/>

    <!-- Email Input -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_email"
        app:boxBackgroundMode="outline"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/email_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_input"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:padding="16dp"
            android:textColor="?attr/colorOnSurface"
            android:textColorHint="?attr/colorOnSecondary"
            android:inputType="textEmailAddress"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Password Label -->
    <TextView
        android:id="@+id/password_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/change_password"
        android:textColor="?attr/colorOnSurface"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/email_input_layout"
        app:layout_constraintStart_toStartOf="parent"/>

    <!-- Password Input -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_password"
        app:boxBackgroundMode="outline"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/password_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_input"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:padding="16dp"
            android:textColor="?attr/colorOnSurface"
            android:textColorHint="?attr/colorOnSecondary"
            android:inputType="textPassword"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Save Changes Button -->
    <Button
        android:id="@+id/save_changes_button"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginTop="32dp"
        android:text="@string/save_changes"
        android:textSize="20sp"
        android:backgroundTint="?attr/colorPrimary"
        android:textColor="?attr/colorOnPrimary"
        app:layout_constraintTop_toBottomOf="@id/password_input_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
