<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:colorBackground">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toTopOf="@+id/editTextText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.458"
        android:src="@drawable/icon" />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="250dp"
        android:layout_height="55dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/border"
        android:ems="10"
        android:hint="@string/username"
        android:drawableStart="@drawable/user"
        android:drawableTint="?attr/colorOnSurface"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:drawablePadding="12dp"
        android:autofillHints="username"
        android:inputType="text"
        android:textSize="24sp"
        android:textColor="?attr/colorOnSurface"
        android:textColorHint="?attr/colorOnSurface"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="250dp"
        android:layout_height="55dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/border"
        android:ems="10"
        android:hint="@string/password"
        android:drawableStart="@drawable/password"
        android:drawableTint="?attr/colorOnSurface"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:drawablePadding="12dp"
        android:autofillHints="password"
        android:inputType="textPassword"
        android:textSize="24sp"
        android:textColor="?attr/colorOnSurface"
        android:textColorHint="?attr/colorOnSurface"
        app:layout_constraintBottom_toTopOf="@+id/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/login"
        android:layout_width="250dp"
        android:layout_height="64dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="?attr/colorPrimary"
        android:text="@string/login"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@id/register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/register"
        android:layout_width="250dp"
        android:layout_height="64dp"
        android:layout_marginBottom="100dp"
        android:backgroundTint="?attr/colorPrimary"
        android:text="@string/register"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
