<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:colorBackground"
    android:fitsSystemWindows="true">

    <Button
        android:id="@+id/button3"
        android:layout_width="250dp"
        android:layout_height="64dp"
        android:layout_marginBottom="112dp"
        android:text="@string/register"
        android:textSize="28sp"
        android:textColor="?attr/colorOnPrimary"
        android:backgroundTint="?attr/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextText2"
        android:layout_width="250dp"
        android:layout_height="55dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/border"
        android:ems="10"
        android:hint="@string/name"
        android:drawableStart="@drawable/id_card"
        android:drawableTint="?attr/colorOnSurface"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:drawablePadding="12dp"
        android:autofillHints="name"
        android:inputType="text"
        android:textSize="24sp"
        android:textColor="?attr/colorOnSurface"
        android:textColorHint="?attr/colorOnSurface"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextText3"
        android:layout_width="250dp"
        android:layout_height="55dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/border"
        android:ems="10"
        android:hint="@string/username"
        android:autofillHints="username"
        android:drawableStart="@drawable/user"
        android:drawableTint="?attr/colorOnSurface"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:drawablePadding="12dp"
        android:inputType="text"
        android:textAlignment="textStart"
        android:textSize="24sp"
        android:textColor="?attr/colorOnSurface"
        android:textColorHint="?attr/colorOnSurface"
        app:layout_constraintBottom_toTopOf="@+id/editTextPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="246dp"
        android:layout_height="55dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/border"
        android:ems="10"
        android:hint="@string/email"
        android:drawableStart="@drawable/mail"
        android:drawableTint="?attr/colorOnSurface"
        android:drawablePadding="12dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:autofillHints="emailAddress"
        android:inputType="textEmailAddress"
        android:textSize="24sp"
        android:textColor="?attr/colorOnSurface"
        android:textColorHint="?attr/colorOnSurface"
        app:layout_constraintBottom_toTopOf="@+id/editTextText3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="250dp"
        android:layout_height="55dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/border"
        android:ems="10"
        android:hint="@string/password"
        android:drawableStart="@drawable/password"
        android:drawableTint="?attr/colorOnSurface"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:drawablePadding="12dp"
        android:autofillHints="password"
        android:inputType="textPassword"
        android:textSize="24sp"
        android:textColor="?attr/colorOnSurface"
        android:textColorHint="?attr/colorOnSurface"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toTopOf="@+id/editTextText2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/icon" />
</androidx.constraintlayout.widget.ConstraintLayout>
