<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:colorBackground"
    android:fitsSystemWindows="true">

    <EditText
        android:id="@+id/editTextNumber2"
        android:layout_width="230dp"
        android:layout_height="55dp"
        android:layout_marginTop="252dp"
        android:autofillHints="123.45"
        android:background="@drawable/border"
        android:ems="10"
        android:hint="@string/enter_income"
        android:importantForAccessibility="no"
        android:inputType="number"
        android:textAlignment="center"
        android:textColor="?attr/colorOnSurface"
        android:textColorHint="?attr/colorOnSurface"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="230dp"
        android:layout_height="59dp"
        android:layout_marginTop="28dp"
        android:popupBackground="?attr/colorSurface"
        android:textColor="?attr/colorOnSurface"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumber2" />

    <Button
        android:id="@+id/editIncomeButton"
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:backgroundTint="?attr/colorPrimary"
        android:text="@string/update_income"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editDateButton"
        app:layout_constraintVertical_bias="0.386" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="wrap_content"
        android:layout_height="59dp"
        android:layout_marginTop="28dp"
        android:text="@string/recurring_income"
        android:textColor="?attr/colorOnSurface"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner2" />

    <Button
        android:id="@+id/editDateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/edit_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox2" />

</androidx.constraintlayout.widget.ConstraintLayout>
